<resources>
    <string name="app_name">ToDO2</string>
    <string name="name_text">Learn english</string>
    <string name="text_task">Test text, test text, test text, test text, test text, test text, test text, test text, test text, test text, test text, test text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_bottom">Chose date</string>
    <string name="save_bottom">Save</string>
    <string name="managment">Create note</string>
    <string name="title_sheet">Add title</string>
    <string name="description_sheet">Add description</string>
    <string name="delete_bottom">Delete</string>
    <string name="reminder">Reminder</string>
    <string name="category">Category</string>
</resources>